        ====== plasma release 0.8.16 (v0_8_16) on Linux (cde-tx32-ldt189) ======

2005-03-10  Brian Kahne  <bkahne@ibmoto.com>

	* Additional minor changes, such as better source location support
	for error messages:  Given a ptree, if it's not a leaf, we attempt
	to find a leaf item.

2005-03-09  Brian Kahne  <bkahne@ibmoto.com>

	* Enhanced the parser to accept several new things:

	Multi-line quotes are now supported using Python's doc-string
	format:  """ string """.

	Nested code blocks are allowed:

	foo = { ... };

	Bare user-statements are allowed in expressions:

	foo = func(int i) { ... };

	Support for nested functions was added, but is currently commented
	out in Parser.cc.

        ====== plasma release 0.8.15 (v0_8_15) on Linux (cde-tx32-ldt189) ======

2005-02-22  Brian Kahne  <bkahne@ibmoto.com>

	* Upgraded to OpenC++ 2.8 (current CVS snapshot).  I merged in my
	changes and got everything working.  The interface is pretty much
	the same, with a few minor tweeks.  In the future, I think that
	we'll want to move towards using OpenC++ simply as a filter and
	have plasma (the perl program) call the preprocessor and
	compiler.  However, that can wait for now.

        ====== plasma release 0.8.14 (v0_8_14) on Linux (cde-tx32-ldt189) ======

2005-02-15  Brian Kahne  <bkahne@ibmoto.com>

	* Included OpenC++ within the Plasma distribution to make it
	easier to distribute the code.

        ====== plasma release 0.8.13 (v0_8_13) on Linux (cde-tx32-ldt189) ======


2005-01-28  Brian Kahne  <bkahne@ibmoto.com>

	* Added an API to the channels in order to allow for some
	reflection/connectivity deduction.  It works like this:  Each
	channel needs to define the following:

	bool multiple_producers_allowed() const:  Returns true if multiple
		producers are allowed for this channel.

	bool multiple_consumers_allowed() const:  Returns true if multiple
		producers are allowed for this channel.

	void *get_source_channel() const:  Return a pointer to the channel