@@ -7,9 +7,15 @@ Define statement:  ( reg foo1 ) {
 Define statement:  ( stuff bar ) {
     size = 20 ;
 }
-Other :  size = 20 ;
-Other :  size = 10 ;
-Other :  define ( stuff bar ) {
+Key:  size
+Value:  20
+  Boolean: true
+  Integer: 20
+Key:  size
+Value:  10
+  Boolean: true
+  Integer: 10
+Stmt:  define ( stuff bar ) {
     size = 20 ;
 }
 Define statement:  ( reg foo2 ) {
@@ -21,9 +27,15 @@ Define statement:  ( reg foo2 ) {
 Define statement:  ( stuff bar ) {
     size = 20 ;
 }
-Other :  size = 20 ;
-Other :  size = 30 ;
-Other :  define ( stuff bar ) {
+Key:  size
+Value:  20
+  Boolean: true
+  Integer: 20
+Key:  size
+Value:  30
+  Boolean: true
+  Integer: 30
+Stmt:  define ( stuff bar ) {
     size = 20 ;
 }
 Define statement:  ( reg foo3 ) {
@@ -35,8 +47,14 @@ Define statement:  ( reg foo3 ) {
 Define statement:  ( stuff bar ) {
     size = 20 ;
 }
-Other :  size = 20 ;
-Other :  size = 30 ;
-Other :  define ( stuff bar ) {
+Key:  size
+Value:  20
+  Boolean: true
+  Integer: 20
+Key:  size
+Value:  30
+  Boolean: true
+  Integer: 30
+Stmt:  define ( stuff bar ) {
     size = 20 ;
 }
