@@ -1,0 +1,7 @@
+
+define(reg foo1) {
+  size = 10;
+  sparse = true;
+  otherstuff = false;
+  foo = 1;
+}
